# EVSE_IDF_CODE

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ControlPilotAdc.c  ControlPilotAdc.h  ControlPilotPwm.c  ControlPilotPwm.h  ControlPilotState.c  ControlPilotState.h  EnergyMeter.c  EnergyMeter.h  GpioExpander.c  GpioExpander.h  OTA.c  OTA.h  ProjectSettings.h  Rfid.c  Rfid.h  check_connection.c  custom_nvs.c  custom_nvs.h  display.c  display.h  ethernet_connect.c  faultGpios.c  faultGpios.h  idf_component.yml  ledStrip.c  ledStrip.h  local_http_server.c  local_http_server.h  logsToSpiffs.c  logsToSpiffs.h  main.c  networkInterfacesControl.c  networkInterfacesControl.h  ocpp.c  ocpp.h  ocpp_task.c  ocpp_task.h  ppp_connect.c  ppp_connect.h  (+12 more)
